# GlobalHub

./: .gitignore  Procfile  README.md  _quarto.yml  app.py  pyproject.toml  requirements.txt
content/: about.qmd
content/documentation/: cost_effectiveness.qmd  data_dictionary.qmd  forecasting.qmd  glossary.qmd  horizon_scanning.qmd  horizon_sources.qmd  inclusion_criteria.qmd  integration_pipeline.qmd  likelihood_of_success.qmd  methodology.qmd  mnch_framework.qmd  product_milestones.qmd  source_methods.qmd  technical_guide.qmd  validation.qmd
data/: HorizonData.csv  PopulationData.csv  WHO_EML.csv  aggregate_data_dictionary.xlsx  all_scope_eml_raw.csv  data_dictionary.xlsx  kenya_eml_2023.csv  raw_data_dictionary.xlsx  required_variables.csv  senegal_eml.csv  south_africa_eml_2025.csv
docs/: ALIGNDataModel.csv  CNAME  Databases Used in The Horizon Scan.csv  Disease_DALYs_Methods_and_Reference_Values.md  Disease_Prevalence_Methods_and_Citations.md  Innovation_Archetype_Classification_Methods.md  README.md  RawDataModel.csv  data_evaluation_report.md  migration_plan.md
docs/content/: about.html
legacy/: app.R  innovation_details.R
modules/: about.py  comparison.py  innovation_details.py  overview.py  overview_and_innovations.py
scripts/: Kenya_EML.qmd  enriching_eml_data.qmd  testing_product_presence_in_eml.qmd
tests/: test_data.py
utils/: config.py  data_loader.py
www/: ALIGN_health_product_data_horizon.csv  ALIGN_health_product_data_horizon_cleaned.csv  HorizonScanCombined.csv  horizon_malaria.csv  styles.css
(+10 files in other folders)
